# local-streaming-setup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: streaming_test.ipynb
reverse-proxy/: nginx.conf
src/: main.py  stream_processor.py
src/api/: endpoints.py  schemas.py
src/core/: config.py  logging.py
src/services/: kafka_client.py  processing.py  rest_service.py
